grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-1
  namespace: monitoring  # Assuming Grafana and Prometheus are deployed in the 'monitoring' namespace
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mon.example.com
    secretName: letsencrypt-staging
  rules:
  - host: mon.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
