prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-2
  namespace: monitoring  # Assuming Grafana is deployed in the 'monitoring' namespace
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - prom.example.com
    secretName: letsencrypt-staging
  rules:
  - host: prom.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
